[package]
name = "sql-clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "9.1.2"
log = "0.4.17"
env_logger = "0.9.0"
rustyline-derive = "0.6.0"
clap = { version = "3.1.18", features = ["cargo"] }
